# OCR-EPITA-project-S3

./: .__afs229A  .gitignore  AUTHORS  Makefile  OCR.c  OCR.h  README  grid0.txt  main.c
GUI/: Makefile  interface.c  interface.glade  rotation.h
GUI2/: basic_pixel.h  interface.h  resize.c  resize.h
GUI2/ProcessedImage/: grid_solved
Image/: .__afs02DF  .__afs1AE3  .__afs222  .__afs548D  .__afs6BA  .__afs7B9A  .__afsBFBE  .__afsE48A  Makefile  array_sort.c  array_sort.h  basic_pixel.c  basic_pixel.h  c  corners.c  corners.h  decompose_image.c  decompose_image.h  detect_lines.c  detect_lines.h  detect_trace.c  detect_trace.h  final_detection.c  final_detection.h  hough_functions.c  hough_functions.h  image_maker.c  image_maker.h  kernel.c  kernel.h  main.c  median_filters.c  median_filters.h  otsu_binary.c  otsu_binary.h  primary_filters.c  primary_filters.h  rotation.c  rotation.h  sobel.c  (+3 more)
Image/numbers/: num
NeuralNetwork/: CMakeLists.txt  GatesTrainingData.c  GatesTrainingData.h  Image.c  Image.h  ImageTraining.c  ImageTraining.h  Makefile  Network.NN  Network.c  Network.h  NetworkTraining.c  NetworkTraining.h  main.c  vector.c  vector.h
NeuralNetwork/ImageDataBase/: CreateDataBase.py
NeuralNetwork/old/: Network.c.old  Network.h.old
OCR_MAIN/: Makefile  OCR.c  OCR.h  main.c
Rotation/: Makefile  main.c  rotation.c  rotation.h
Solver/: Makefile  main.c  sudoku_res.c
